--- a/week3/adyen-clone/style.css
+++ b/week3/adyen-clone/style.css
@@ -426,6 +426,7 @@ ul li{
 .footer-info{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding-top: 25px;
     border-top: 1px solid var(--grey-darker);
 }
