--- a/week1/digital_resume_responsive/main.css
+++ b/week1/digital_resume_responsive/main.css
@@ -64,13 +64,13 @@ h2{
 	border-radius: 20px;
 }
 .content {
-	transform: translatez(70px) scale(0.8);
+	transform: translateZ(70px) scale(0.8);
 	line-height: 1.5em;
 }
 .content h1 {
 	position: relative;
 	margin-bottom: 30px;
-	transform: translatez(20px)
+	transform: translateZ(20px)
 }
 .content h1:after {
 	content: "";
@@ -139,7 +139,7 @@ li.java{
 .back-content-form textarea {
 	background: transparent;
 	border: 0;
-	outline: 0;
+	/* outline: 0; */
 	border-bottom: 2px solid #698f3f;
 	padding: 5px;
 	width: 100%;
@@ -148,7 +148,7 @@ li.java{
 .back-content-form label {
 	margin: 15px 0;
 }
-.back-content-form input[type="submit"] {	
+.back-content-form .submit_btn {	
 	width: auto;
 	margin: 10px auto;
 	padding: 5px 10px;
